--- a/Competition-Management/src/styles.css
+++ b/Competition-Management/src/styles.css
@@ -1,4 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body { height: 95%; }
+body { margin: 10px 20px 10px 20px; font-family: Roboto, "Helvetica Neue", sans-serif; }
