--- a/Competition-Management/src/app/feature/home/component/home.component.html
+++ b/Competition-Management/src/app/feature/home/component/home.component.html
@@ -6,13 +6,15 @@
   </mat-form-field>
 </form>
 <div class="table-wrapper">
-  <table mat-table [dataSource]="competitionDataSource" class="mat-elevation-z8">
+  <table mat-table [dataSource]="competitionDataSource" matSort class="mat-elevation-z8">
 
+    <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Name</th>
       <td mat-cell *matCellDef="let element"> {{element.name}} </td>
     </ng-container>
 
+    <!-- Place Column -->
     <ng-container matColumnDef="place">
       <th mat-header-cell *matHeaderCellDef> Place</th>
       <td mat-cell *matCellDef="let element"> {{element.place}} </td>
@@ -21,4 +23,5 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
+  <mat-paginator [pageSizeOptions]="[2, 10, 20]" showFirstLastButtons></mat-paginator>
 </div>
