--- a/Competition-Management/src/app/core/menu/component/menu.component.css
+++ b/Competition-Management/src/app/core/menu/component/menu.component.css
@@ -3,13 +3,12 @@
   color: #ffffff;
 }
 
-.mat-button, .mat-raised-button{
+.mat-button, .mat-raised-button {
   color: #f0fff3;
 }
 
-.example-fill-remaining-space {
+.fill-space {
   flex: 1 1 auto;
 }
-
 
 
