--- a/Competition-Management/src/app/feature/home/component/home.component.css
+++ b/Competition-Management/src/app/feature/home/component/home.component.css
@@ -1,10 +1,37 @@
-.table-wrapper{
-  width: 50%;
+.table-wrapper {
+  width: 100%;
 }
 
 table {
   width: 100%;
 }
-th.mat-sort-header-sorted {
-  color: black;
+
+tr.example-detail-row {
+  height: 0;
+}
+
+.example-element-row td {
+  border-bottom-width: 0;
+}
+
+.example-element-detail {
+  overflow: hidden;
+  display: flex;
+}
+.example-element-symbol {
+  font-weight: bold;
+  font-size: 40px;
+  line-height: normal;
+}
+
+.example-element-description {
+  padding: 16px;
+}
+
+.tab {
+  padding-left: 16em;
+}
+
+.example-element-description-attribution {
+  opacity: 0.5;
 }
