--- a/Competition-Management/src/app/feature/home/component/home.component.html
+++ b/Competition-Management/src/app/feature/home/component/home.component.html
@@ -1,27 +1,59 @@
-<p>home works!</p>
-<form>
-  <mat-form-field>
-    <mat-label>Favorite food</mat-label>
-    <input matInput placeholder="Ex. Pizza" value="Sushi">
-  </mat-form-field>
-</form>
+<mat-form-field>
+  <mat-label>Search</mat-label>
+  <input (keyup)="applyFilter($event)" matInput>
+</mat-form-field>
+
 <div class="table-wrapper">
-  <table mat-table [dataSource]="competitionDataSource" matSort class="mat-elevation-z8">
+  <table [dataSource]="competitionDataSource" class="mat-elevation-z8" mat-table matSort multiTemplateDataRows>
 
     <!-- Name Column -->
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> Name</th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      <th *matHeaderCellDef mat-header-cell mat-sort-header> Name</th>
+      <td *matCellDef="let element" mat-cell> {{element.name}} </td>
     </ng-container>
 
     <!-- Place Column -->
     <ng-container matColumnDef="place">
-      <th mat-header-cell *matHeaderCellDef> Place</th>
-      <td mat-cell *matCellDef="let element"> {{element.place}} </td>
+      <th *matHeaderCellDef mat-header-cell mat-sort-header> Place</th>
+      <td *matCellDef="let element" mat-cell> {{element.place}} </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <!-- Federation Column -->
+    <ng-container matColumnDef="federation">
+      <th *matHeaderCellDef mat-header-cell mat-sort-header> Federation</th>
+      <td *matCellDef="let element" mat-cell> {{element.federation}} </td>
+    </ng-container>
+
+    <!-- CompetitionStatus Column -->
+    <ng-container matColumnDef="competitionStatus">
+      <th *matHeaderCellDef mat-header-cell mat-sort-header> Status</th>
+      <td *matCellDef="let element" mat-cell> {{element.competitionStatus}} </td>
+    </ng-container>
+
+    <!-- Animatie -->
+    <ng-container matColumnDef="expandedDetail">
+      <td *matCellDef="let element" [attr.colspan]="displayedColumns.length" mat-cell>
+        <div [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'"
+             class="example-element-detail">
+          <div class="example-element-description">
+            {{element.name}}
+            <div class="tab"> Start date: {{element.startDate}}  </div>
+            Place: {{element.place}}
+            <div class="tab"> End date: {{element.endDate}}  </div>
+            Number of entries: {{element.noOfEntries}} <br>
+            Number of teams: {{element.noOfCountries}}
+          </div>
+        </div>
+      </td>
+    </ng-container>
+
+    <tr *matHeaderRowDef="displayedColumns" mat-header-row></tr>
+    <tr (click)="expandedElement = expandedElement === element ? null : element" *matRowDef="let element; columns: displayedColumns;"
+        [class.example-expanded-row]="expandedElement === element"
+        class="example-element-row"
+        mat-row>
+    </tr>
+    <tr *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row" mat-row></tr>
   </table>
-  <mat-paginator [pageSizeOptions]="[2, 10, 20]" showFirstLastButtons></mat-paginator>
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 </div>
