--- a/Competition-Management/src/app/feature/home/component/home.component.html
+++ b/Competition-Management/src/app/feature/home/component/home.component.html
@@ -37,9 +37,9 @@
              class="example-element-detail">
           <div class="example-element-description">
             {{element.name}}
-            <div class="tab"> Start date: {{element.startDate}}  </div>
+            <div class="tab"> Start date: {{element.startDate | date}}  </div>
             Place: {{element.place}}
-            <div class="tab"> End date: {{element.endDate}}  </div>
+            <div class="tab"> End date: {{element.endDate | date}}  </div>
             Number of entries: {{element.noOfEntries}} <br>
             Number of teams: {{element.noOfCountries}}
           </div>
@@ -48,7 +48,8 @@
     </ng-container>
 
     <tr *matHeaderRowDef="displayedColumns" mat-header-row></tr>
-    <tr (click)="expandedElement = expandedElement === element ? null : element" *matRowDef="let element; columns: displayedColumns;"
+    <tr (click)="expandedElement = expandedElement === element ? null : element"
+        *matRowDef="let element; columns: displayedColumns;"
         [class.example-expanded-row]="expandedElement === element"
         class="example-element-row"
         mat-row>
