--- a/Competition-Management/src/app/feature/club/component/club.component.html
+++ b/Competition-Management/src/app/feature/club/component/club.component.html
@@ -1,13 +1,22 @@
-<mat-toolbar>
-  <span class="fill-space"> {{club[0].name}} Club</span>
+<form class="example-form">
+  <mat-form-field>
+    <mat-label>Club name</mat-label>
+    <input matInput value={{club[0].name}}>
+  </mat-form-field>
 
-  <!-- Edit club button -->
-  <button mat-button>Edit club</button>
+  <mat-form-field class="tab">
+    <mat-label>Club address</mat-label>
+    <input matInput value={{club[0].address}}>
+  </mat-form-field>
 
-  <!-- Add athlete button -->
-  <button mat-button>Add athlete</button>
+  <button mat-button>
+    <mat-icon class="done_btn">done</mat-icon>
+  </button>
+</form>
 
-</mat-toolbar>
+<button class="add_btn" mat-fab>
+  <mat-icon>add</mat-icon>
+</button>
 
 <div class="table-wrapper">
   <table [dataSource]="athleteDataSource" class="mat-elevation-z8" mat-table>
@@ -22,7 +31,7 @@
     <!-- Name Column -->
     <ng-container matColumnDef="firstName">
       <th *matHeaderCellDef mat-header-cell> First name</th>
-      <td *matCellDef="let element" mat-cell> {{element.firstName}} </td>
+      <td *matCellDef="let element" mat-cell> {{element.type}} </td>
     </ng-container>
 
     <!-- Place Column -->
@@ -34,7 +43,7 @@
     <ng-container matColumnDef="details">
       <th *matHeaderCellDef mat-header-cell> Details</th>
       <td *matCellDef="let element" mat-cell>
-        <a routerLink="/athlete">
+        <a [routerLink]="['/athlete', element.personId]">
           <button color="primary" mat-icon-button>
             <mat-icon>menu</mat-icon>
           </button>
@@ -42,19 +51,10 @@
       </td>
     </ng-container>
 
-    <ng-container matColumnDef="update">
-      <th *matHeaderCellDef mat-header-cell> Update</th>
-      <td *matCellDef="let element" mat-cell>
-        <button (click)=openDialog(element.surname,element.firstName,element.id) color="accent" mat-icon-button>
-          <mat-icon>system_update</mat-icon>
-        </button>
-      </td>
-    </ng-container>
-
     <ng-container matColumnDef="delete">
       <th *matHeaderCellDef mat-header-cell> Delete</th>
       <td *matCellDef="let element" mat-cell>
-        <button color="warn" mat-icon-button>
+        <button (click)="delete(element.personId)" color="warn" mat-icon-button>
           <mat-icon>delete</mat-icon>
         </button>
       </td>
