--- a/Competition-Management/src/app/feature/club/component/club.component.css
+++ b/Competition-Management/src/app/feature/club/component/club.component.css
@@ -1,19 +1,40 @@
 .mat-toolbar {
   background-image: linear-gradient(to right, #6f55c2 0%, #475eba 100%, #1c1c8d 100%);
   color: #ffffff;
-  min-height:35px;
-  max-height:35px
+  min-height: 35px;
+  max-height: 35px
 }
+
 .table-wrapper {
   width: 100%;
   overflow-x: auto;
   overflow-y: hidden;
   min-width: 500px;
 }
+
 .fill-space {
   flex: 1 1 auto;
 }
 
 table {
   width: 100%;
+}
+
+.add_btn {
+  position: fixed !important;
+  bottom: 20px;
+  right: 20px;
+  color: #ffffff;
+}
+
+.done_btn {
+  color: #00f64b;
+}
+
+.tab {
+  padding-left: 2em;
+}
+
+.example-form {
+  margin-top: 25px;
 }
