--- a/Competition-Management/src/app/feature/competition/component/competition.component.css
+++ b/Competition-Management/src/app/feature/competition/component/competition.component.css
@@ -28,17 +28,15 @@ table {
 }
 
 .grid-item2 {
+
+
   grid-column-start: 2;
   grid-column-end: 2;
+  grid-row-start: 1;
+  grid-row-end: 2;
 }
 
 .grid-item3 {
   grid-column-start: 1;
   grid-column-end: 1;
-}
-
-.grid-item4 {
-  text-align: center;
-  grid-column-start: 2;
-  grid-column-end: 2;
 }
