Add competition update functionality

--- a/Competition-Management/src/app/feature/management/component/management.component.css
+++ b/Competition-Management/src/app/feature/management/component/management.component.css
@@ -57,7 +57,7 @@ tr.example-detail-row {
   color: #c41919;
 }
 
-.add_btn {
+.add-btn {
   position: fixed !important;
   bottom: 20px;
   right: 20px;
