--- a/Competition-Management/src/app/feature/management/component/management.component.html
+++ b/Competition-Management/src/app/feature/management/component/management.component.html
@@ -4,7 +4,7 @@
 </mat-form-field>
 
 
-<span class="add_btn">
+<span class="add-btn">
     <button (click)="openDialog()" mat-fab>
       <mat-icon>add</mat-icon>
     </button>
