Add login component, session service and authorization guard

--- a/Competition-Management/src/app/core/login/component/login.component.html
+++ b/Competition-Management/src/app/core/login/component/login.component.html
@@ -1,1 +1,15 @@
-<p>login works!</p>
+<mat-form-field>
+  <mat-label>Enter your email</mat-label>
+  <input matInput placeholder="pat@example.com">
+  <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
+</mat-form-field>
+
+<br>
+<mat-form-field>
+  <mat-label>Enter your password</mat-label>
+  <input [type]="hide ? 'password' : 'text'" matInput>
+  <button (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide" mat-icon-button
+          matSuffix>
+    <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+  </button>
+</mat-form-field>
